# pr_4dof

./: .gitignore  README.md  pr_4dof_compilation.sh
gmr/: CMakeLists.txt  Main  main.cpp
gmr/Fer_der/indata/: data01.txt  data02.txt  data03.txt  data04.txt  data05.txt
gmr/Fer_der/outdata/: data01_rescaled.txt  data02_rescaled.txt  data03_rescaled.txt  data04_rescaled.txt  data05_rescaled.txt  gmm.txt  gmr_Mu.txt  gmr_Sigma.txt
gmr/Fer_izq/indata/: data01.txt  data02.txt  data03.txt  data04.txt  data05.txt
gmr/Jose_alineado_der/indata/: data01.txt  data02.txt  data03.txt  data04.txt  data05.txt
gmr/Jose_alineado_der/outdata/: data01_rescaled.txt  data02_rescaled.txt  data03_rescaled.txt  data04_rescaled.txt  data05_rescaled.txt  gmm.txt  gmr_Mu.txt  gmr_Sigma.txt
gmr/Jose_alineado_izq/indata/: data01.txt  data02.txt  data03.txt  data04.txt  data05.txt
gmr/MATLAB/: plotGMM.m  plotall.m
gmr/Rafa_ant/Rafa_der_cart/indata/: data01.txt  data02.txt  data04.txt  data05.txt
gmr/Rafa_ant/Rafa_der_joint/indata/: data01.txt  data02.txt  data03.txt
gmr/Rafa_ant/Rafa_der_joint/outdata/: data04_rescaled.txt
gmr/Rafa_ant/Rafa_izq_cart/indata/: data01.txt  data02.txt  data03.txt  data04.txt  data05.txt
gmr/Rafa_ant/Rafa_izq_cart/outdata/: data04_rescaled.txt  gmm.txt  gmr_Mu.txt
gmr/Rafa_ant/Rafa_izq_joint/indata/: data01.txt  data02.txt  data03.txt  data04.txt
gmr/Rafa_ant/Rafa_izq_joint/outdata/: data01_rescaled.txt  data04_rescaled.txt  data05_rescaled.txt  gmr_Mu.txt
gmr/Rafa_der/indata/: data01.txt  data02.txt  data03.txt  data04.txt  data05.txt
gmr/Rafa_der/outdata/: gmm.txt
gmr/Rafa_der/outdata_no_matlab/: data01_rescaled.txt  data02_rescaled.txt  data03_rescaled.txt  data04_rescaled.txt  data05_rescaled.txt  gmm.txt  gmr_Mu.txt  gmr_Sigma.txt
gmr/Rafa_der_cart/indata/: data03.txt
gmr/Rafa_der_joint/indata/: data04.txt  data05.txt
gmr/Rafa_der_joint/outdata/: data01_rescaled.txt  data02_rescaled.txt  data03_rescaled.txt  data04_rescaled.txt  data05_rescaled.txt  gmm.txt  gmr_Mu.txt  gmr_Sigma.txt
gmr/Rafa_izq_cart/outdata/: data01_rescaled.txt  data02_rescaled.txt  data03_rescaled.txt  data05_rescaled.txt  gmr_Sigma.txt
gmr/Rafa_izq_joint/indata/: data05.txt
gmr/Rafa_izq_joint/outdata/: data02_rescaled.txt  data03_rescaled.txt  gmr_Sigma.txt
patient_data/: Alejandro1_CoefOffline_Data.txt  (+69 more)
src/pr_aux/: CMakeLists.txt  package.xml
src/pr_aux/include/pr_aux/: add_gain.hpp  add_gain_message_filters.hpp  displayer.hpp  element_wise_mult.hpp  kalman_filter.hpp  matrix_mult.hpp  replayer_pos_force.hpp  saturator.hpp
src/pr_aux/src/: add_gain.cpp  add_gain_message_filters.cpp  derivator.cpp  displayer.cpp  element_wise_mult.cpp  kalman_filter.cpp  matrix_mult.cpp  replayer.cpp  replayer_pos_force.cpp  saturator.cpp
src/pr_biomech/: CMakeLists.txt  package.xml
src/pr_biomech/include/pr_biomech/: CalLigForceAnta_Pau.hpp  DynamicsHerz_Pau.hpp  admittance_euler_biomech.hpp  algorithm_assistance.hpp  model_pau_sim.hpp  streaming_gdlf.hpp
src/pr_biomech/src/: CalConst_Pau2.cpp  CalLigForceAnta_Pau.cpp  CalTheta2Theta3.cpp  Cinematica.cpp  Dinamica.cpp  DynamicsHerz_Pau.cpp  FOpt.cpp  MusForceOpt2_Anta_Coef_Guard_Red.cpp  PelCalcs.cpp  admittance_euler_biomech.cpp  algorithm_assistance.cpp  model_pau_sim.cpp  streaming_gdlf.cpp
src/pr_controllers/: CMakeLists.txt
src/pr_controllers/include/pr_controllers/: gus_controller.hpp  gus_controller_mf.hpp  gus_discretized_controller.hpp  gus_discretized_controller_mf.hpp  pdg_controller.hpp  pid_controller.hpp
src/pr_controllers/src/: gus_controller.cpp  gus_discretized_controller.cpp  gus_discretized_controller_mf.cpp  pdg_controller.cpp  pid_controller.cpp
src/pr_dmp/: CMakeLists.txt  ConfigExtras.cmake  package.xml
src/pr_dmp/include/pr_dmp/: dmp_admittance_force.hpp  dmp_evader_force.hpp  dmp_evader_force_cart.hpp  dmp_evader_force_pid.hpp  dmp_force_adapted.hpp  dmp_ref_force.hpp  dmp_ref_gen.hpp  dmp_reversible.hpp  dmp_reversible_force_lim.hpp  dmp_reversible_gmr.hpp
src/pr_dmp/src/: dmp_admittance_force.cpp  dmp_evader_force.cpp  dmp_evader_force_cart.cpp  dmp_evader_force_pid.cpp  dmp_force_adapted.cpp  dmp_ref_force.cpp  dmp_ref_gen.cpp  dmp_reversible.cpp  dmp_reversible_force_lim.cpp  dmp_reversible_gmr.cpp
src/pr_lib_biomech/: CMakeLists.txt  package.xml
src/pr_lib_biomech/include/pr_lib_biomech/: pr_algebra_fun.hpp  pr_biomech_fun.hpp  pr_data_structures.hpp  pr_json_calibration (copy).hpp  pr_json_calibration.hpp  pr_json_data.hpp  pr_json_gdlf.hpp  pr_mocap.hpp
src/pr_lib_biomech/src/: pr_algebra_fun.cpp  pr_biomech_fun.cpp  pr_data_structures.cpp  pr_json_calibration (copy).cpp  pr_json_calibration.cpp  pr_json_gdlf.cpp  pr_mocap.cpp
src/pr_lwpr/: CMakeLists.txt  package.xml
src/pr_lwpr/include/pr_lwpr/: lwpr_fwd.hpp  lwpr_inv.hpp
src/pr_lwpr/src/: lwpr_fwd.cpp  lwpr_inv.cpp
src/pr_mocap/: CMakeLists.txt
src/pr_mocap/include/pr_mocap/: pr_x_mocap.hpp  pr_x_mocap_recorder.hpp  pr_x_mocap_synchronizer.hpp
src/pr_mocap/natnet_sdk/samples/BroadcastTrigger/: BroadcastTrigger.cpp  makefile
src/pr_mocap/src/: error_model.cpp  pr_x_mocap.cpp  pr_x_mocap_recorder.cpp  pr_x_mocap_synchronizer.cpp
src/pr_ref_gen/: CMakeLists.txt  package.xml
src/pr_ref_gen/include/pr_ref_gen/: ref_des_auto.hpp  ref_init_auto.hpp  ref_pose.hpp  ref_static_auto.hpp
src/pr_ref_gen/src/: ref_des_auto.cpp  ref_init_auto.cpp  ref_pose.cpp  ref_server.cpp  ref_static_auto.cpp
src/pr_sing/: CMakeLists.txt  package.xml
src/pr_sing/include/pr_sing/: sing_evader.hpp  sing_evader_message_filters.hpp  sing_releaser.hpp
src/pr_sing/src/: sing_evader message_filters.cpp  sing_evader.cpp  sing_releaser.cpp
src/pr_topic_forwarding/: CMakeLists.txt  package.xml
src/pr_topic_forwarding/include/pr_topic_forwarding/: array_to_quaternion.hpp  array_to_wrench.hpp  float_to_float.hpp  force_state_to_wrench.hpp  topic_forwarding.hpp
src/pr_topic_forwarding/src/: array_to_quaternion.cpp  array_to_wrench.cpp  float_to_float.cpp  force_state_to_wrench.cpp  topic_forwarding.cpp
(+574 files in other folders)
